[package]
name = "project-euler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
automod = "1.0.13"
unicode-ident = "1.0.12"
fast-fibonacci = "0.2.0"
reikna = "0.12.3"
divisors = "0.2.1"
num = "0.4.1"